--- a/templates/home.html
+++ b/templates/home.html
@@ -2404,9 +2404,9 @@ document.addEventListener('DOMContentLoaded', function() {
                 if (window.selectedPeriod) {
                     // Display special period info
                     if (window.selectedPeriod === 'overnight') {
-                        timeDisplay = 'Qua đêm';
+                        timeDisplay = '9:00 PM';
                     } else if (window.selectedPeriod === 'daytime') {
-                        timeDisplay = 'Qua ngày';
+                        timeDisplay = '9:00 AM';
                     }
                 } else {
                     // Format time to AM/PM
