--- a/templates/renter/payment_details.html
+++ b/templates/renter/payment_details.html
@@ -258,8 +258,9 @@ code {
 }
 
 /* Custom colors for booking status */
-.bg-primary {
-    background-color: #ff8c00 !important;
+.bg-orange {
+    background-color: #ff9800 !important;
+    color: #fff !important;
 }
 </style>
 {% endblock %}
